samples/_failures_safe/1761392520_22844d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2185424d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2185424d.c:167:5: error: expected declaration or statement at end of input
  167 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_2185424d.c:167:5: error: expected declaration or statement at end of input
